--- a/src/modules/wallet/modules/portfolio/less/portfolio.less
+++ b/src/modules/wallet/modules/portfolio/less/portfolio.less
@@ -61,13 +61,14 @@
     &__w-tbody {
       max-height: calc(100vh ~'- 208px');
       transform: translate3d(0, 0, 0);
-      will-change: transform;
     }
 
     .smart-table__row {
       min-width: 768px;
+      transform: translate3d(0, 0, 0);
 
       w-visible {
+        transform: translate3d(0, 0, 0);
         min-height: 64px;
       }
 
